--- a/src/app/styles/contact.module.scss
+++ b/src/app/styles/contact.module.scss
@@ -1,10 +1,11 @@
 .containerContacto{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns:1fr  1fr;
     align-items: center;
-    justify-items: center;
+    justify-items: start;
     height: 100%;
     min-height: calc(100vh - 100px - 160px);
+    gap: 60px;
 
     .Card{
         width: 100%;
@@ -53,17 +54,23 @@
     }
 
     @media (max-width: 1440px) {
-      
+
     }
 
     @media (max-width: 1024px) {
-        
+
     }
 
     @media (max-width: 768px) {
+        justify-items: center;
         grid-template-columns: 1fr;
+        margin-right: 0px;
         gap: 60px;
         padding-bottom: 100px;
+        
+    .onlydesk{
+        display: none;
+    }
         .Card{
             .email{
                 padding: 5px 0 10px 0;
