creditos, fixes reproductor, cambio de logos

--- a/src/app/styles/work.module.scss
+++ b/src/app/styles/work.module.scss
@@ -1,10 +1,11 @@
 .containerWork {
     position: relative;
-
     .containerWorkDiv {
-        position: absolute;
+        position: unset;
         width: 100%;
+        min-height: auto;
         height: auto;
+        top: 0;
 
         .containerVideos {
             width: 100%;
