--- a/src/app/styles/modalvideo.module.scss
+++ b/src/app/styles/modalvideo.module.scss
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vh;
+    height: calc(100vh);
     z-index: 100;
     background-color: rgba($color: #000000, $alpha: 1);
     display: flex;
@@ -11,6 +11,21 @@
     justify-content: center;
     flex-direction: column;
     overflow: hidden;
+}
+
+.antibug{
+    background-color: transparent;
+    width: 100vw;
+    height: calc(100vh);
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    z-index: 99;
+}
+
+.playpausebtn {
+    font-size: 50px;
+    color: #fff !important;
 }
 
 .contenedorVideo {
@@ -35,9 +50,13 @@
     z-index: 105;
     max-width: 100vw;
     width: 100%;
-    height: 100%;
+    height: calc(100vh);
     padding: 0 20px;
+    pointer-events: none;
 
+     *{
+        pointer-events: auto;
+     }
     .closebtn {
         position: absolute;
         top: 20px;
@@ -46,11 +65,7 @@
         color: #fff !important;
     }
 
-    .playpausebtn {
-
-        font-size: 50px;
-        color: #fff !important;
-    }
+   
 
     .buttonContainerMute {
         position: absolute;
@@ -115,7 +130,7 @@
         transform: translateY(-50%);
         display: flex;
         align-items: center;
-        gap: 10px;
+        gap: 20px;
         cursor: pointer;
 
         .Text {
@@ -129,7 +144,6 @@
         }
 
         .icon {
-            display: none;
             color: #fff !important;
         }
 
@@ -155,7 +169,7 @@
         display: flex;
         align-items: center;
         flex-direction: row-reverse;
-        gap: 10px;
+        gap: 20px;
         cursor: pointer;
 
         .Text {
@@ -169,7 +183,6 @@
         }
 
         .icon {
-            display: none;
             color: #fff !important;
         }
 
@@ -186,6 +199,15 @@
             }
         }
     }
+}
+
+.closebtn {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 50px;
+    color: #fff !important;
+    z-index: 100000;
 }
 
 .overlayCredits {
@@ -207,6 +229,8 @@
     align-items: center;
     color: #fff !important;
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100%);
+
+   
 
     .buttonCredits {
         position: absolute;
