--- a/src/app/styles/modalvideo.module.scss
+++ b/src/app/styles/modalvideo.module.scss
@@ -10,7 +10,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .antibug{
@@ -34,6 +34,7 @@
     height: auto;
     color: #fff;
     aspect-ratio: 16/9;
+    
 }
 
 .reactplayer {
@@ -121,6 +122,10 @@
         color: #fff !important;
         width: max-content;
         transform: translateX(-50%);
+        min-width: 320px;
+        padding: 0 20px;
+        width: 100%;
+        text-align: center;
     }
 
     .BtnNext {
