--- a/src/app/styles/modalvideo.module.scss
+++ b/src/app/styles/modalvideo.module.scss
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 100vw;
-    height: calc(100vh);
+    height: 100dvh;
     z-index: 100;
     background-color: rgba($color: #000000, $alpha: 1);
     display: flex;
