--- a/src/app/styles/about.module.scss
+++ b/src/app/styles/about.module.scss
@@ -4,7 +4,7 @@
     align-items: center;
     justify-items: center;
     height: 100%;
-    min-height: calc(100vh - 100px - 160px);
+    min-height: calc(100dvh - 100px - 160px);
 
     .gridAbout {
         display: grid;
