--- a/src/app/styles/main.module.scss
+++ b/src/app/styles/main.module.scss
@@ -21,7 +21,7 @@
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;    
+    min-height: 100dvh;    
     background-color: #fff;
 }
 
