--- a/src/app/styles/modalvideo.module.scss
+++ b/src/app/styles/modalvideo.module.scss
@@ -16,7 +16,7 @@
 .antibug{
     background-color: transparent;
     width: 100vw;
-    height: calc(100vh);
+    height: 100dvh;
     overflow: hidden;
     position: absolute;
     top: 0;
@@ -51,7 +51,7 @@
     z-index: 105;
     max-width: 100vw;
     width: 100%;
-    height: calc(100vh);
+    height: 100dvh;
     padding: 0 20px;
     pointer-events: none;
 
