cambio de textos, optimizaciones

--- a/src/app/styles/main.module.scss
+++ b/src/app/styles/main.module.scss
@@ -27,7 +27,7 @@
 
 
 .footer{
-    flex-grow: 1; /* Ocupa todo el espacio vertical disponible */
+    flex-grow: 1;
     justify-content: space-between;
     color: black;
     display: flex;
